# transform-myd

./: .gitattributes  .gitignore  LOGBOEK.md  README.md  apply_split_patch.py  git-cheatsheet.md  pyproject.toml
.github/workflows/: ci.yml  ci_runlists.yml
config/: runlist_ci.yaml
config/M140/BNKA/: column_map.yaml  meta.yaml  value_map.yaml  value_rules.yaml
config/M141/BNKA/: column_map.yaml
config/_shared/: meta.yaml  meta.yaml.bak_20250904_165849
runlists/: ci.yaml  full_batch.yaml
scripts/: run_bank.ps1  scaffold_from_excel.py
src/transform_myd/: __init__.py  cli.py  config.py  io_excel.py  linting.py  logging.py  mappings.py  pipeline.py  reports.py  runlist.py  scaffold.py  scaffold_excel.py  transforms.py  validate.py
